# rosplan_interface_tiago

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  tiago_rosplan.rosinstall.old
action/: Go.action  Undock.action
include/: RPCheck.h  RPGo.h  RPTutorial10.h
launch/: hazard_detection.launch  tutorial_01.launch  tutorial_10.launch
pddl/: optic-clp  parser
pddl/guide/domain/: domain.pddl
pddl/guide/problem/: problem.pddl
pddl/hazard_detection/domain/: domain.pddl
pddl/hazard_detection/problem/: problem.pddl
rosplan_tiago_active_human_fall_prevention/: CMakeLists.txt  package.xml  setup.py
rosplan_tiago_active_human_fall_prevention/action/: GoScanning.action  HumanApproachDetect.action  HumanInteract.action
rosplan_tiago_active_human_fall_prevention/include/: RPGoScanning.h  RPHumanApproachDetect.h  RPHumanInteract.h
rosplan_tiago_active_human_fall_prevention/launch/: active_human_fall_prevention.launch  testing.launch
rosplan_tiago_active_human_fall_prevention/nodes/: go_scanning_server  human_approach_detect_server  human_interact_server
rosplan_tiago_active_human_fall_prevention/pddl/active_human_fall_prevention/domain/: domain.pddl
rosplan_tiago_active_human_fall_prevention/pddl/active_human_fall_prevention/problem/: problem.pddl  problem_human_coming.pddl
rosplan_tiago_active_human_fall_prevention/src/: RPGoScanning.cpp  RPHumanApproachDetect.cpp  RPHumanInteract.cpp
rosplan_tiago_common/: CMakeLists.txt  package.xml  setup.py
rosplan_tiago_common/nodes/: pose_saver  rosplan_sys_control
rosplan_tiago_common/pddl/: ff  ff-x
rosplan_tiago_common/src/rosplan_tiago_common/: rosplan_control.py  rosplan_tiago_kb.py  tiago_kb.py  tiago_torso_controller.py  tiago_utils.py
rosplan_tiago_hazard_detection/: CMakeLists.txt  package.xml  setup.py
rosplan_tiago_hazard_detection/action/: Check.action  Go.action
rosplan_tiago_hazard_detection/include/: RPCheck.h  RPCheckDishwasher.h  RPCheckDoor.h  RPCheckLight.h  RPGo.h
rosplan_tiago_hazard_detection/launch/: guide.launch  hazard_detection.launch
rosplan_tiago_hazard_detection/nodes/: check_dishwasher_server  check_door_server  check_light_server  check_server  go_server
rosplan_tiago_hazard_detection/pddl/hazard_detection/domain/: domain.pddl
rosplan_tiago_hazard_detection/pddl/hazard_detection/problem/: problem.pddl
rosplan_tiago_hazard_detection/scripts/: go_server.py
rosplan_tiago_hazard_detection/src/: RPCheck.cpp  RPCheckDishwasher.cpp  RPCheckDoor.cpp  RPCheckLight.cpp  RPGo.cpp
rosplan_tiago_msgs/rosplan_tiago_core_msgs/: CMakeLists.txt  package.xml
rosplan_tiago_msgs/rosplan_tiago_core_msgs/msg/: ROSPlanService.msg
rosplan_tiago_msgs/rosplan_tiago_core_msgs/srv/: GetLocation.srv
rosplan_tiago_msgs/rosplan_tiago_scenarios_msgs/: CMakeLists.txt  package.xml
rosplan_tiago_msgs/rosplan_tiago_scenarios_msgs/action/: CheckLight.action  GetItem.action
rosplan_tiago_params/: CMakeLists.txt  package.xml  setup.py
rosplan_tiago_params/config/: location.json  location.json.sim  location.yaml  locations.yml  people.yml
rosplan_tiago_params/nodes/: location_marker_publisher  location_name_server  location_name_server.old  location_name_server_yml  people_server  pose_saver
rosplan_tiago_params/scripts/: LocationNameServer.py
rosplan_tiago_params/src/: LocationNameServer.cpp
rosplan_tiago_params/srv/: GetHuman.srv
rosplan_tiago_transportation_attendant/: CMakeLists.txt  package.xml  setup.py
rosplan_tiago_transportation_attendant/action/: GetLoad.action  GoWithAttendance.action  LeaveLoad.action
rosplan_tiago_transportation_attendant/include/: RPGetLoad.h  RPGoWithAttendance.h  RPLeaveLoad.h
rosplan_tiago_transportation_attendant/launch/: transportation_attendant.launch
rosplan_tiago_transportation_attendant/nodes/: get_load_server  go_with_attendance  go_with_attendance_server  leave_load_server
rosplan_tiago_transportation_attendant/pddl/transport_attendant/domain/: domain.pddl
rosplan_tiago_transportation_attendant/pddl/transport_attendant/problem/: problem.pddl
rosplan_tiago_transportation_attendant/pddl/transportation_attendant/domain/: domain.pddl
rosplan_tiago_transportation_attendant/pddl/transportation_attendant/problem/: problem.pddl
rosplan_tiago_transportation_attendant/src/: RPGetLoad.cpp  RPGoWithAttendance.cpp  RPLeaveLoad.cpp
rosplan_tiago_wandering/: CMakeLists.txt  package.xml  setup.py
rosplan_tiago_wandering/action/: GiveItem.action  Greet.action
rosplan_tiago_wandering/include/: RPGetItem.h  RPGiveItem.h  RPGreet.h
rosplan_tiago_wandering/launch/: wandering.launch
rosplan_tiago_wandering/nodes/: get_item_server  give_item_server  greet_server
rosplan_tiago_wandering/pddl/wandering/domain/: domain.pddl
rosplan_tiago_wandering/pddl/wandering/problem/: problem.pddl
rosplan_tiago_wandering/src/: RPGetItem.cpp  RPGiveItem.cpp  RPGreet.cpp
scripts/: check_server.py  check_server_sm.py  go_server.py  go_server_sm.py  rosplan_run.bash  undock.py
src/: RPCheck.cpp  RPGo.cpp  RPTutorial10.cpp
