<?xml version="1.0"?>
<package format="2">
  <name>rosplan_tiago_params</name>
  <version>0.0.0</version>
  <description>The rosplan_tiago_params package</description>

  <maintainer email="lzielinski66@gmail.com">Lukasz Zielinski</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rospkg</depend>
  <depend>yaml</depend>
  <depend>rospy_message_converter</depend>

  <export>

  </export>
</package>
