<?xml version="1.0"?>
<package format="2">
  <name>rosplan_tiago_transportation_attendant</name>
  <version>0.0.0</version>
  <description>The rosplan_tiago_transportation_attendant package</description>


  <maintainer email="lzielinski66@gmail.com">Lukasz Zielinski</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>smach</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>rosplan_tiago_scenarios_msgs</depend>
  <depend>rosplan_tiago_core_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>people_msgs</depend>
  <depend>roscpp</depend>
  <depend>rosplan_dispatch_msgs</depend>
  <depend>rosplan_knowledge_msgs</depend>
  <depend>rosplan_planning_system</depend>
  <depend>rosplan_tiago_common</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>

</package>
