<?xml version="1.0"?>
<package format="2">
  <name>rosplan_tiago_scenarios_msgs</name>
  <version>0.0.0</version>
  <description>The rosplan_tiago_scenarios_msgs package</description>

  <maintainer email="lzielinski66@gmail.com">Lukasz Zielinski</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>people_msgs
  <build_depend>people_msgs</build_depend>

  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>people_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
